[tool.poetry]
name = "tinyllama"
version = "0.1.0"
description = "Llama from scratch"
authors = ["Mani Sundararajan <mani@hey.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
